<resources>
    <string name="app_name">FilmeZ</string>

    <!--Drawer-->
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>

    <!--Menu-->
    <string name="home">Principal</string>
    <string name="my_movies">Meus filmes</string>
    <string name="about">Sobre</string>

    <!--Connection-->
    <string name="connection_error">Problema com a conexão. Conecte e tente novamente!</string>
    <string name="connection_fail">Houve uma falha nos nossos servidores, tente novamente.</string>
    <string name="my_movies_str">Meus filmes</string>

        <string name="terms">Lorem ipsum dolor sit amet, consectetur adipiscing elit.Cras ex odio, aliquet dignissim molestie in, auctor id est. Duis cursus condimentum tellus at volutpat.
Praesent ligula tortor, consectetur non efficitur eu, varius sed quam. Integer non massa fringilla, venenatis dolor eget, sollicitudin mauris. Cras pharetra viverra tortor, ac molestie dui finibus vel.
Vestibulum venenatis efficitur urna at ultrices. Nulla ipsum diam, eleifend et ex vitae, accumsan fringilla felis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
Proin varius, risus ut dignissim consectetur, nisl mi suscipit tortor, eget pulvinar lectus velit non sem. In viverra ante.
Lorem ipsum dolor sit amet, consectetur adipiscing elit.Cras ex odio, aliquet dignissim molestie in, auctor id est. Duis cursus condimentum tellus at volutpat.
Praesent ligula tortor, consectetur non efficitur eu, varius sed quam. Integer non massa fringilla, venenatis dolor eget, sollicitudin mauris. Cras pharetra viverra tortor, ac molestie dui finibus vel.
Vestibulum venenatis efficitur urna at ultrices. Nulla ipsum diam, eleifend et ex vitae, accumsan fringilla felis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
Proin varius, risus ut dignissim consectetur, nisl mi suscipit tortor, eget pulvinar lectus velit non sem. In viverra ante.
Lorem ipsum dolor sit amet, consectetur adipiscing elit.Cras ex odio, aliquet dignissim molestie in, auctor id est. Duis cursus condimentum tellus at volutpat.
Praesent ligula tortor, consectetur non efficitur eu, varius sed quam. Integer non massa fringilla, venenatis dolor eget, sollicitudin mauris. Cras pharetra viverra tortor, ac molestie dui finibus vel.
Vestibulum venenatis efficitur urna at ultrices. Nulla ipsum diam, eleifend et ex vitae, accumsan fringilla felis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
Proin varius, risus ut dignissim consectetur, nisl mi suscipit tortor, eget pulvinar lectus velit non sem. In viverra ante.lalallalalala</string>
    <string name="evaluations_title">Avaliações</string>
    <string name="awards_title">Premiações</string>
    <string name="txt_plot">Sinopse</string>
    <string name="production_title">Produção</string>
    <string name="add_movie_title">Cadastrar filme</string>
    <string name="sort_by_name">Ordenar por nome</string>
    <string name="sort_by_year">Ordenar por ano</string>
    <string name="filter">Filtro</string>
    <string name="sort_normal">Ordem de inserção</string>
    <string name="str_no_movie_found">Nenhum filme foi encontrado, tente novamente⇧\nVocê tentou pelo nome em Inglês?</string>
    <string name="str_welcome">Bem vindo novamente</string>
    <string name="str_last_movies">Filmes adicionados recentemente</string>
    <string name="str_welcome_text">Pesquise pelo nome (em Inglês) dos seus filmes favoritos e cadastre-os na sua lista para poder ver as informações a qualquer momento.</string>
    <string name="search_movies">Buscar filmes</string>
    <string name="str_about">Bem vindo ao FilmeZ\n\nCom o FilmeZ você poderá salvar todas as informações dos seus filmes favoritos. Você poderá acessar as informações do seus filmes mesmo que esteja sem internet no momento da consulta.\n\nTudo que você precisa fazer é utilizar a barra de pesquisa na tela Principal, digitando ou usando o comando de voz com o nome do filme. Uma lista com todos os filmes que casam com a pesquisa será apresentada, clique no filme que lhe interessar veja as informações e cadastre-o na sua lista de filmes favoritos.\n\nInfelizmente (ou felizmente?) todas as informações ainda são em inglês. Mas pense pelo lado bom, enquanto você conhece mais sobre seus filmes favoritos, você pratica seu inglês, porque não?\n\nAproveite que o Oscar está próximo e crie a lista de filmes que você deseja ver antes da premiação :D</string>
    <string name="search">Pesquisar filmes...</string>
    <string name="welcome_first">Salve informações dos seus filmes favoritos. Tudo que você precisa fazer é utilizar a barra de pesquisa ⇧, digitando ou usando o comando de voz com o nome do filme.\nPor enquanto a pesquisa e as respostas são em inglês. Aproveite para praticar!\nO Oscar está próximo, crie a lista de filmes que você deseja ver antes da premiação :D</string>
    <string name="welcome_first_title">Bem vindo ao FilmeZ</string>
    <string name="movie_add">Filme cadastrados com sucesso na sua lista</string>


</resources>
