<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:checked="true"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/my_movies"
            android:checked="false"
            android:icon="@drawable/ic_local_movies_black_24dp"
            android:title="@string/my_movies" />
    </group>
    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="single">
        <item
            android:id="@+id/about"
            android:checked="false"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/about" />
    </group>



</menu>