<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<item
    android:id="@+id/action_filter"
    android:title=""
    android:icon="@drawable/ic_more_vert_black_24dp"
    app:showAsAction="always|withText"
    >
    <!-- submenu -->
    <menu>
        <item android:id="@+id/sort_name"
            android:title="@string/sort_by_name"
            android:orderInCategory="1"
            app:showAsAction="always" />

        <item android:id="@+id/sort_year"
            android:title="@string/sort_by_year"
            android:orderInCategory="2"
            app:showAsAction="always" />

        <item android:id="@+id/sort_insert"
            android:title="@string/sort_normal"
            android:orderInCategory="2"
            app:showAsAction="always" />
    </menu>
</item>
</menu>